--- a/video.html
+++ b/video.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Demo Video</title>
+</head>
+<body>
+  <h1>Demo Video</h1>
+  <video width="640" height="360" controls>
+    <source src="assets/video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</body>
+</html>
